--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,7 @@ jobs:
       - checkout
       - run:
           name: "an env var that is part of this project"
-          command: |
-          echo $MY_ENV_VAR
+          command: echo $MY_ENV_VAR
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 
