--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,19 +5,35 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "an env var that is part of this project"
-          command: |
-          echo $MY_ENV_VAR
+##################### ENVIRONMENT VARIABLES #############################
+  # build:
+  #   # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+  #   # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   # Add steps to the job
+  #   # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: "an env var that is part of this project"
+  #         command: echo $MY_ENV_VAR
+
+    build:
+      docker:
+      -image: circleci/node:13.8.0
+      
+      steps:
+       - run:
+            command: echo "Hello, Maryam!"
+
+       - run:
+            commmand: echo "Hello, World!"
+            when: on_fail
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 
+workflows:
+    my-workflow:
+      jobs:
+        - build
