job failures walkthrough

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       -image: circleci/node:13.8.0
       
       steps:
+       - checkout
        - run:
             command: echo "Hello, Maryam!"
 
