--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2.1
 jobs:
   build:
     docker:
-    - image: circleci/node:13.8.0
+    images: circleci/node:13.8.0
 
     steps:
       - run: echo $CIRCLE_BUILD_NUM
